# newid

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.tif
.github/workflows/: build-docker.yml
app/routes/: health.py  mrz.py
models/det/: README.md  config.json
models/rec/: README.md  config.json
src/: document_detector.py  mrz_fastmrz.py  mrz_ocr.py  mrz_parser.py  pipeline.py  utils.py
